crates/providers/ferrin-openai/tests/suite/snapshots/all__suite__responses_stream__responses_stream_reasoning.snap
---
source: crates/providers/ferrin-openai/tests/suite/responses_stream.rs
expression: parts
---
[
  {
    "type": "stream-start",
    "warnings": []
  },
  {
    "type": "response-metadata",
    "id": "resp_stream",
    "timestamp": "2025-09-13T00:01:40Z",
    "model_id": "o4-mini"
  },
  {
    "type": "reasoning-start",
    "id": "rs_s1:0",
    "provider_metadata": {
      "openai": {
        "itemId": "rs_s1",
        "reasoningEncryptedContent": null
      }
    }
  },
  {
    "type": "reasoning-delta",
    "id": "rs_s1:0",
    "delta": "Considering ",
    "provider_metadata": {
      "openai": {
        "itemId": "rs_s1"
      }
    }
  },
  {
    "type": "reasoning-delta",
    "id": "rs_s1:0",
    "delta": "the forecast.",
    "provider_metadata": {
      "openai": {
        "itemId": "rs_s1"
      }
    }
  },
  {
    "type": "reasoning-end",
    "id": "rs_s1:0",
    "provider_metadata": {
      "openai": {
        "itemId": "rs_s1"
      }
    }
  },
  {
    "type": "text-start",
    "id": "msg_s2",
    "provider_metadata": {
      "openai": {
        "itemId": "msg_s2"
      }
    }
  },
  {
    "type": "text-delta",
    "id": "msg_s2",
    "delta": "It is sunny."
  },
  {
    "type": "text-end",
    "id": "msg_s2",
    "provider_metadata": {
      "openai": {
        "itemId": "msg_s2"
      }
    }
  },
  {
    "type": "finish",
    "finish_reason": {
      "unified": "stop"
    },
    "usage": {
      "input": {
        "total": 42,
        "no_cache": 32,
        "cache_read": 10
      },
      "output": {
        "total": 12,
        "text": 8,
        "reasoning": 4
      }
    },
    "provider_metadata": {
      "openai": {
        "responseId": "resp_stream",
        "serviceTier": "default"
      }
    }
  }
]
